--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 
 # logs
 /stacktrace.log
-/test/reports
+/test
 /logs
 
 # project release file
@@ -30,6 +30,9 @@
 # older plugin install locations
 /plugins
 /web-app/plugins
+/web-app/uploads
+/web-app/reports
+
 
 # "temporary" build files
 /target
